[package]
name = "murmel-example"
version = "0.1.0"
authors = ["Justin Moon <mail@justinmoon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# murmel = { git = "https://github.com/rust-bitcoin/murmel.git" }
murmel = { path = "../murmel" }
bitcoin = { version= "0.21", features=["use-serde"]}
bitcoin_hashes = "0.7"
log = "0.4"
rand = "0.7"
simple_logger = "0.5.0"
futures-preview = "=0.3.0-alpha.18"
futures-timer = "0.3"
